[gd_scene load_steps=2 format=2]

[ext_resource path="res://Objects/Attack.gd" type="Script" id=1]

[node name="Base" type="Node2D"]
script = ExtResource( 1 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="Timer" type="Timer" parent="."]

[node name="Sprite" type="Sprite" parent="."]

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
